syntax = "proto2";

package com.tisza.tarock;
option java_package = "com.tisza.tarock.proto";
option java_outer_classname = "MainProto";

import "event.proto";

message Message
{
    oneof message_type
    {
        KeepAlive keepAlive = 1;
        Login login = 2;
        LoginResult login_result = 10;
        FCMToken fcm_token = 9;
        string action = 3;
        Event event = 4;
        CreateGameSession create_game_session = 5;
        ServerStatus server_status = 6;
        JoinGameSession join_game_session = 7;
        DeleteGameSession delete_game_session = 8;
        JoinHistoryGame join_history_game = 11;
        StartGameSessionLobby start_game_session_lobby = 12;
        Chat chat = 13;
        JoinHistoryGameResult join_history_game_result = 14;
    }
}

message KeepAlive {}

message User
{
    required int32 id = 1;
    required string name = 2;
    optional string image_url = 3;
    required bool is_friend = 4;
    required bool online = 5;
    required bool bot = 6;
}

message Login
{
    optional string facebook_token = 1;
    optional string google_token = 2;
}

message LoginResult
{
    optional int32 user_id = 1;
}

message FCMToken
{
    required string fcm_token = 1;
    required bool active = 2;
}

message Chat
{
    required string message = 1;
}

message GameSession
{
    enum State
    {
        LOBBY = 1;
        GAME = 2;
        DELETED = 3;
    }
    required int32 id = 1;
    required string type = 2;
    repeated int32 user_id = 3;
    required State state = 4;
}

message CreateGameSession
{
    required string type = 1;
    required string double_round_type = 2;
}

message DeleteGameSession
{
    required int32 game_session_id = 1;
}

message ServerStatus
{
    repeated GameSession available_game_session = 1;
    repeated User available_user = 2;
}

message JoinGameSession
{
    optional int32 game_session_id = 1;
}

message StartGameSessionLobby {}

message JoinHistoryGame
{
    required int32 game_id = 1;
}

message JoinHistoryGameResult
{
    required int32 game_session_id = 1;
}
